# bientropy

./: CMakeLists.txt  Makefile  README.md  bient-test.cpp  bientropy.cpp  bientropy.h  bientropy.sln  bientropy.vcxproj  bientropy.vcxproj.filters  bitent.h  bitent_cache.h  bitent_types.h  bittwid.h  iohelper.h
libbient/: bientropy.h  bitent_cache.h  bitent_lut.h  bitent_procs.h  bitent_types.h  bittwid.h  iohelper.h  lutcraft.h
results/: stats2-32.csv
